asset/css/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: Arial;
    margin: 0;
}

header {
    padding: 40px;
    text-align: Left;
    background: darkcyan;
    color: #fff;
}

nav {
    display: flex;
    float: right;
}

nav a {
    color: #fff;
    padding: 14px 20px;
    text-decoration: none;
    text-align: right;
}

nav a:hover {
    background-color: #ddd;
    color: black;
}

nav .icon {
    display: none;
}

nav.responsive a {
    float: none;
    display: block;
    text-align: left;
}

img {
    width: 100%;
}

main {
    /* display: flex; */
    /* flex-wrap: wrap; */
    width: 100%;
}

.about {
    display: flex;
    flex-wrap: wrap;
    /* margin: 0 0 0 80px; */
    margin: 20px 30px;
    text-align: left;
    width: 95%;
    align-items: center;
}

.flex-row {
    display: flex;
    justify-content: left;
}

.section-title {
    font-size: 20px;
    font-family: cursive;
    color: #024e76;
    /* margin: 0 0 0 80px; */
    width: 40%;
}

.step-info {
    flex: 2 20%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

.vl-border1 {
    border-right: 3px solid #39a6b2;
    height: 150px;
    flex: 2 1%;
}

.step-text {
    flex: 25;
}

.step-text p {
    color: white;
    font-size: 15px;
    text-align: left;
    line-height: 1.3;
    margin-left: 30px;
    width: 100%;
}

aside {
    /* float: left; */
    /* flex: 1; */
    background-color: white;
    /* padding: 20px;
      text-align: left; */
    width: 100%;
}

aside-nav {
    border: 1px solid;
}

.image-container {
    position: relative;
    text-align: center;
    /* display: inline-block; */
}

/* .bottom-right {
    position: relative;
    top: 8px;
    text-align: right;
    transform: translate(-50%, -50%);
  } */


section {
    /* display: flexbox;
      flex: 3; */
    background-color: #7e7272;
    padding: 20px;

}

/* .blue-section {
    background-color: #fff;
    width: 100%;
    padding: 20px;
    height: 200px;
    margin-top: 10px;
    margin-left: 5px;
    margin-bottom: 10px;
  
  } */

.fun-stuff-1 {
    flex: 3;
    /* background-color: #fff; */
    padding: 20px;
    display: flex;
    justify-content: center;
}

.fun-stuff-2 {
    flex: 3;
    /* background-color: #fff; */
    padding: 20px;
    display: flex;
    justify-content: center;
}

.card {
    border-style: solid;
    border-width: 1px;
    /* background-color: skyblue; */
    /* border-radius: 100px; */
    /* margin-top: 10px; */
    margin-left: 10px;
    margin-right: 10px;
    /* margin-bottom: 5px; */
    padding: 1 10 1 10px;
    flex: 800px;
    height: 200px;

}

.card header {
    padding: 20px;
}

.card p {
    text-align: center;
}

.row {
    display: flex;
    flex-wrap: wrap;

}

.column-1 {
    flex: 1 0 15%;
    text-align: ;
    background-color: #fff;
}

.column-2 {
    flex: 1 0 85%;
    background-color: #ffffff;
}

.benefits {
    margin-right: 20px;
    padding: 20px;
    clear: both;
    float: left;
    width: 20%;
    height: 100%;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    background-color: None;
}

.benefit {
    margin-bottom: 32px;
    color: #ffffff;
    background-color: none;
}

.footer {
    display: flex;
    width: 100%;
    height: 50px;
    background: darkcyan;
    margin: 10px;
}

.contact-info {
    /* display: flex; */
    float: right;
}

.contact-info ul {
    display: flex;
    }

.contact-info a {
    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
    font-weight: bold;
}

